files/iptables/rules.v4
# Generated by iptables-save v1.4.21 on Sat Apr  2 02:17:29 2016
*nat
:PREROUTING ACCEPT [412:49121]
:INPUT ACCEPT [404:48669]
:OUTPUT ACCEPT [44:2787]
:POSTROUTING ACCEPT [44:2787]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A DOCKER -i docker0 -j RETURN
COMMIT
# Completed on Sat Apr  2 02:17:29 2016
# Generated by iptables-save v1.4.21 on Sat Apr  2 02:17:29 2016
*filter
:INPUT ACCEPT [2325:238037]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [1637:385371]
:DOCKER - [0:0]
:DOCKER-ISOLATION - [0:0]
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p udp -m udp --dport 60000:61000 -j ACCEPT
-A FORWARD -j DOCKER-ISOLATION
-A FORWARD -o docker0 -j DOCKER
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT
-A DOCKER-ISOLATION -j RETURN
-A INPUT -j REJECT
COMMIT
# Completed on Sat Apr  2 02:17:29 2016
